--- a/style.css
+++ b/style.css
@@ -1,4 +1,171 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family:'Space Grotesk', sans-serif;
+  background-color: black;
+  color: white;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 300px;
+  background-image: url(public/image-profile-mobile.webp);
+  background-position: top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+li {
+  list-style-type: none;
+}
+
+.link {
+  display: flex;
+  margin-top:20px;
+}
+
+.link li:not(:last-child){
+  margin-right: 20px;
+}
+
+.rings {
+  position: absolute;
+  top: 15vh;
+  left: -265px;
+}
+
+.circle {
+  position: absolute;
+  top: 26vh;
+  right: -60px;
+}
+
+article {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+h2 span {
+  border-bottom: 4px solid #4EE1A0;
+}
+
+article p {
+  color: #D9D9D9;
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 26px;
+  margin-bottom: 24px;
+}
+
+.contact {
+  display: inline-block;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  letter-spacing: 2.286px;
+  border-bottom: 2px solid #4EE1A0;
+  padding-bottom: 10px;
+  margin-bottom: 80px;
+}
+
+hr {
+  width: 90vw;
+  height: 1px;
+  background-color: white;
+  border: none;
+  margin-bottom: 40px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+li p {
+  margin-bottom: 24px;
+}
+
+#tablet {
+  display: none;
+}
+
+#desktop {
+  display: none;
+}
+
+@media (min-width: 640px) {
+  h1 {
+    padding-left: 25px;
+  }
+	nav {
+    padding-top: 15px;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    background: none;
+    padding-bottom: 0;
+  }
+  .link {
+    margin-top: 0;
+    padding-top: 8px;
+    height: 100%;
+    padding-right: 25px;
+  }
+  #tablet {
+    display: block;
+    max-width: 280px;
+  }
+  section {
+    position: relative;
+    bottom: 52px;
+    display: flex;
+    align-items: end;
+    margin-bottom: 50px;
+  }
+  article {
+    padding-left: 30px;
+    text-align: start;
+  }
+  article p {
+    font-size: 15px;
+  }
+  .contact {
+    margin-bottom: 0;
+  }
+  .circle {
+    top: 61.5vh;
+    z-index: 1;
+  }
+  main ul {
+    width: 90%;
+    column-gap: 120px;
+    display: grid;
+    grid-template-columns: 180px 180px;
+    text-align: start;
+  }
 }
