--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li {
   right: -60px;
 }
 
-article {
+header article {
   text-align: center;
   font-size: 25px;
   font-weight: 700;
@@ -66,7 +66,7 @@ h2 span {
   border-bottom: 4px solid #4EE1A0;
 }
 
-article p {
+header article p {
   color: #D9D9D9;
   margin-top: 20px;
   font-size: 17px;
@@ -75,7 +75,7 @@ article p {
   margin-bottom: 24px;
 }
 
-.contact {
+.contact, .view {
   display: inline-block;
   color: white;
   font-size: 16px;
@@ -87,6 +87,10 @@ article p {
   margin-bottom: 80px;
 }
 
+.contact:hover, .view:hover {
+  color: #4EE1A0;
+}
+
 hr {
   width: 90vw;
   height: 1px;
@@ -95,7 +99,7 @@ hr {
   margin-bottom: 40px;
 }
 
-main {
+.exp {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -118,7 +122,119 @@ li p {
   display: none;
 }
 
+.title {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.proj {
+  display: block;
+  margin: 0;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project h2 {
+  font-size: 40px;
+}
+
+.project h3 {
+  margin-top: 20px;
+  font-size: 24px;
+}
+
+.project article {
+  text-align: start;
+}
+
+.small {
+  display: block;
+  max-width: 343px;
+}
+.large {
+  display: none;
+  transition: opacity 200ms; 
+}
+
+.lang {
+  color: #D9D9D9;
+  margin: 7px 0 20px 0;
+  display: flex; 
+}
+
+.lang p:not(:last-child) {
+  margin-right: 10px;
+}
+
+.view:first-child {
+  margin-right: 30px;
+}
+
+.images {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.images:hover .large {
+  opacity: 30%;
+}
+
+.images:hover .views-image {
+  display: flex;
+}
+
+.views-image {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+}
+
+.views-image .view {
+  z-index: 1;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.views-image .view:not(:last-child) {
+  margin-bottom: 40px;
+}
+
 @media (min-width: 640px) {
+  .project hr {
+    display: none;
+  }
+  .small {
+    display: none;
+  }
+  .large {
+    display: block;
+    max-width: 280px;
+  }
+  .title {
+    margin-top: 80px;
+    width: 90vw;
+    margin-bottom: 60px;
+  }
+  .project-list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 280px 280px;
+    justify-content: space-evenly;
+  }
+  .project h3 {
+    font-size: 22px;
+  }
   h1 {
     padding-left: 25px;
   }
@@ -143,18 +259,18 @@ li p {
   #desktop {
     display: none;
   }
-  div {
+  .pres {
     position: relative;
     bottom: 52px;
     display: flex;
     align-items: end;
     margin-bottom: 50px;
   }
-  article {
+  header article {
     padding-left: 30px;
     text-align: start;
   }
-  article p {
+  header article p {
     font-size: 15px;
   }
   .contact {
@@ -164,7 +280,7 @@ li p {
     top: 46vh;
     z-index: 1;
   }
-  main ul {
+  .exp ul {
     width: 90%;
     column-gap: 120px;
     display: grid;
@@ -174,20 +290,32 @@ li p {
 }
 
 @media (min-width: 768px) {
+  .title {
+    margin-top: 140px;
+    max-width: 95%;
+    margin-bottom: 80px;
+  }
+  .large {
+    max-width: 350px;
+  }
+  .project-list {
+    display: grid;
+    grid-template-columns: 350px 350px;
+  }
   h1 {
     padding-left: 90px;
   }
   .link {
     padding-right: 130px;
   }
-  article {
+  header article {
     padding-left: 80px;
   }
-  article p {
+  header article p {
     font-size: 18px;
     max-width: 420px;
   }
-  div {
+  .pres {
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -209,7 +337,7 @@ li p {
   hr {
     width: 85%;
   }
-  main ul {
+  .exp ul {
     width: 85%;
     column-gap: 50px;
     grid-template-columns: 200px 200px 200px;
