--- a/style.css
+++ b/style.css
@@ -15,15 +15,19 @@ body {
 /* HEADER */
 
 nav {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 300px;
-  background-image: url(public/image-profile-mobile.webp);
-  background-position: top;
-  background-size: contain;
-  background-repeat: no-repeat;
   z-index: 1;
+  padding-bottom: 350px;
+}
+
+#mobile {
+  position: absolute;
+  width: 120%;
+  top: -10%;
+  z-index: -1;
 }
 
 header {
@@ -62,8 +66,9 @@ li {
 }
 
 .circle {
+  z-index: 1;
   position: absolute;
-  top: 220px;
+  top: 250px;
   right: -60px;
 }
 
@@ -223,6 +228,104 @@ li p {
 
 /* ------------ */
 
+/* CONTACT FORM */
+
+#contactForm, form, .input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #242424;
+}
+
+#contactForm {
+  padding-top: 60px;
+}
+
+#contactForm h2 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+#contactForm p {
+  width: 90vw;
+  margin-bottom: 45px;
+}
+
+form, .input {
+  width: 90%;
+}
+
+.input input, textarea {
+  color: white;
+  outline: none;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 20px;
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid white;
+  resize: none;
+  caret-color: transparent;
+}
+
+.input input:focus, textarea:focus {
+  border-bottom: 1px solid #4EE1A0;
+}
+
+.container {
+  margin-top: 32px;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  margin-bottom: 90px;
+}
+
+input[type="submit"] {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  letter-spacing: 2.286px;
+  border-bottom: 2px solid #4EE1A0;
+  padding-bottom: 10px;
+}
+
+input[type="submit"]:enabled:hover {
+  cursor: pointer;
+  color: #4EE1A0;
+}
+
+input[type="submit"]:disabled {
+  cursor: not-allowed;
+}
+
+/* ------------ */
+
+.containerHr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: #242424;
+}
+
+.containerHr hr {
+  margin: 0;
+}
+
+/* FOOTER */
+
+footer {
+  padding-top: 40px;
+  background-color: #242424;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
+}
 
 /* Responsive Tablet */
 
@@ -241,22 +344,19 @@ li p {
     max-width: 280px;
   }
 
-  h1 {
-    padding-left: 25px;
-  }
 	nav {
-    padding-top: 15px;
-    width: 100%;
+    width: 90%;
     flex-direction: row;
     justify-content: space-between;
     background: none;
     padding-bottom: 0;
   }
-  .link {
+  .link:not(footer ul) {
     margin-top: 0;
     padding-top: 8px;
-    height: 100%;
-    padding-right: 25px;
+  }
+  #mobile {
+    display: none;
   }
   #tablet {
     display: block;
@@ -283,7 +383,7 @@ li p {
     margin-bottom: 0;
   }
   .circle {
-    top: 390px;
+    top: 375px;
     z-index: 1;
   }
 
@@ -321,6 +421,20 @@ li p {
   }
 
   /* ------------ */
+
+  /* FOOTER */
+
+  footer {
+    padding: 40px 30px 50px 30px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  footer ul {
+    padding-right: 0;
+  }
+
+  /* ------------ */
 }
 
 
@@ -329,12 +443,8 @@ li p {
 @media (min-width: 768px) {
 
   /* HEADER */
-
-  h1 {
-    padding-left: 90px;
-  }
-  .link {
-    padding-right: 130px;
+  nav {
+    width: 85%;
   }
   header article {
     padding-left: 80px;
@@ -351,6 +461,9 @@ li p {
   h2 {
     font-size: 60px;
   }
+  #mobile {
+    display: none;
+  }
   #desktop {
     display: block;
     max-width: 360px;
@@ -359,7 +472,7 @@ li p {
     display: none;
   }
   .circle {
-    top: 452px;
+    top: 440px;
     z-index: 1;
   }
 
@@ -412,4 +525,49 @@ li p {
 
   /* ------------ */
 
+  /* CONTACT */
+
+  #contactForm {
+    flex-direction: row;
+    text-align: start;
+    align-items: start;
+    justify-content: space-around;
+  }
+
+  #contactForm p {
+    max-width: 445px;
+  }
+
+  form {
+    width: 40%;
+  }
+
+  /* ------------ */
+
+  .containerHr{
+    display: flex;
+    justify-content: center;
+    background-color: #242424;
+  }
+
+  .containerHr hr {
+    width: 95%;
+    margin: 0;
+  }
+
+  /* FOOTER */
+  footer h2 {
+    font-size: 32px;
+  }
+  footer {
+    padding: 40px 50px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  footer ul {
+    padding-right: 0;
+  }
+  
+  /* ------------ */
 }
